checker/tests/parsing/errors/keyword_as_type_name.mft
trait type {}
=== error ===
Unrecognized token `type` found at 6:10
Expected one of "identifier"